--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="one">
+    <h1>Welcome to my Github Search Project!</h1>
+  </div>
   <app-root></app-root>
 </body>
 </html>
